[package]
name = "lookups-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pasta_curves = "0.3.0"
rand_core = { version = "0.6", features = [ "getrandom" ] }
plotters = { version = "0.3.0" }
proptest = "1.0.0"

[dependencies.halo2_proofs]
git = "https://github.com/zcash/halo2.git"
rev = "9617336d46a18f3949260731d02bd711fba9d863"
features = ["dev-graph"]
